# ipuma-lib

./: .gitignore  .gitmodules  CMakeDefinitions.txt  CMakeLists.txt  Dockerfile  README.md  elba.sh  history_snapshot.sh  run_regression.sh  scores.json  test.sh  testdumper.sh
cmake/: AddGPLibrary.cmake
cpusw/: CMakeLists.txt  aligners.hpp  alignment_genometools.hpp  alignment_ipuma_cpu.hpp  alignment_ksw2.hpp  alignment_libgaba.hpp  alignment_seqan.hpp  cpuswconfig.hpp  dumper.cpp  main.cpp  run_comparison.hpp
download/: download_benchmark_datasets.sh
ipusw/: CMakeLists.txt  batch.hpp  ipumultidriver.hpp  ipuswconfig.hpp  ipuworker.hpp  load_sequences.hpp  main.cpp  run_comparison.hpp
scripts/: count_failed.sh  dataset_dumper.py  dataset_stats.py  extract.py  greedy_xdrop.py  improvements.py  lib.sh  merge_results_rep.sh  run_cpusw.sh  run_ipusw_benchmarks.sh  run_ipusw_benchmarks_mult.sh  run_ipusw_benchmarks_slack.sh  run_seqan.sh  thread_imbalance.py
scripts/cpusw_benchmark/: cpush_bench.sh  cpush_bench_gtools.sh  cpush_bench_habana2.sh  cpush_bench_ipu.sh  cpush_bench_kswfixed.sh  cpush_bench_milan.sh  cpush_bench_milangtools.sh
scripts/dataset_stats/: celegans_stats.json  ecoli_stats.json  elba100_stats.json  run.sh  simulated85_stats.json
scripts/download/: download_benchmark_datasets.sh
scripts/ipusw_benchmark/: download_datasets.sh  ipush_batch.sh  ipush_bench.sh  ipush_bench_scaling.sh
scripts/logan/: convert_logan_seed.py
scripts/perf_analysis/: batch_analysis.py  perf_analysis.py  performance_cpu_ipu.py  ratios.csv  ratios_bow.csv  requirements.txt  values.csv  values_bow.csv
scripts/perf_analysis/ipulog_parser/: __init__.py
scripts/testscripts/: test.sh  test_elegans.sh  test_parity.sh  test_slurm.sh  testcpu.sh  testcpu_elba.sh  testcpu_elegans.sh  testcpu_ipu.sh  testcpu_logan.sh  testdumper.sh  testdumper_stats.sh  testelba.sh
src/: CMakeLists.txt  batching.cpp  batching.h  cmd_arguments.hpp  complexity.cpp  complexity.h  driver.cpp  driver.hpp  ipu_base.cpp  ipu_base.h  ipu_batch_affine.cpp  ipu_batch_affine.h  ipu_config.cpp  ipu_config.h  ipuma.h  load_sequences.cpp  load_sequences.h  partition.cpp  partition.h  sequence_database.h  sequences_generator.cpp  sequences_generator.h  sequences_loader.cpp  sequences_loader.h  shared_types.h  types.cpp  types.h
src/codelets/: ExternalCodelet.hpp  codelet_batch_affine.cpp  codelet_batch_asm.S  codelet_batch_asm.cpp  codelet_greedy_xdrop.cpp  codelet_multi_affine.cpp  codelet_multi_asm.S  codelet_multi_asm.cpp  codelet_multi_band_xdrop.cpp  codelet_multi_striped.cpp  codelet_multi_striped_asm.S  codelet_multi_striped_asm.cpp  codelet_multi_xdrop.cpp  codelet_seed_extend_multi_restricted_xdrop.cpp  codelet_seed_extend_multi_restricted_xdrop_backup.cpp  codelet_seed_extend_multi_xdrop.cpp  codelet_striped_asm.S  codelet_striped_asm.cpp  codelet_xdrop.cpp  helper_utils.cpp  striped.S
src/core/: xdrop.hpp
src/swatlib/: CMakeLists.txt  encoding.cpp  encoding.h  fasta.cpp  fasta.h  matrix.cpp  matrix.h  similarity.cpp  similarity.h  swatlib.h  timing.hpp  vector.hpp
test/: CMakeLists.txt  batching-test.cpp  comparison-test.cpp  dev-test.cpp  ipu-ssw-test.cpp  mn_cmp-test.cpp  parity-test.cpp  partition-test.cpp  simple-test.cpp
test/core/: CMakeLists.txt  elba_integration.cpp  helper.hpp  ipuma-core.cpp  ipuma-core_integration.cpp  pastis_integration.cpp
test/data/: input_a.fa  input_b.fa
test/perf/: CMakeLists.txt  ipuma-perf.cpp  main.cpp
test/ssw/: CMakeLists.txt  ssw.cpp  ssw.hpp  ssw_core.cpp
xdrop/: CMakeLists.txt  data.h  main.cpp  seqxdrop.cpp  xdrop_cpu.h
